--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,35 @@
-transactions_2024.csv
-ValeursFoncieres-2024.txt
-*.zip
-.env
-data/processed/transactions_2024.csv
-valeursfoncieres-2024.txt.zip
+# Fichiers/dossiers spécifiques à ignorer
+__pycache__/
+*.py[cod]
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+
+# Environnements virtuels
 .venv/
+env/
+venv/
+
+# Fichiers de configuration sensibles
+*.env
+
+# Données lourdes
+*.csv
+*.zip
+*.txt
+*.tsv
+*.xls*
+*.parquet
+*.h5
+*.db
+
+# Checkpoints Jupyter
+.ipynb_checkpoints/
+
+# Fichiers de log
+*.log
+
+# VS Code
+.vscode/
