--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -9,9 +9,15 @@ services:
     container_name: homepedia-app
     volumes:
       - ../data:/app/data
+      - ~/.cache/pip:/root/.cache/pip
       - ../src:/app/src
     ports:
       - "8501:8501"
     environment:
       - STREAMLIT_SERVER_HEADLESS=true
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8501 || exit 1"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
