--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,34 @@
 [tool.black]
-line-length = 100
+line-length = 88
 target-version = ["py311"]
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.git
+  | \.mypy_cache
+  | \.venv
+  | build
+  | dist
+  | outputs
+  | data
+)/
+'''
 
 [tool.ruff]
 target-version = "py311"
-line-length = 100
-select = ["E","F","I","UP","B"]
-ignore = []
+line-length = 88
+src = ["src", "scripts"]
+
+[tool.ruff.lint]
+select = ["E", "F", "W", "B", "UP"]
+ignore = ["E501"]
 
 [tool.mypy]
 python_version = "3.11"
-ignore_missing_imports = true
-strict = false
+warn_unused_configs = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+disallow_untyped_defs = false
+no_implicit_optional = true
+ignore_missing_imports = false
+plugins = []
