--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,15 +1,13 @@
-version: "3.9"
-
 x-env: &default-env
   STREAMLIT_SERVER_PORT: ${STREAMLIT_SERVER_PORT:-8501}
-  DB_PATH: ${DB_PATH:-/data/homepedia.db}
+  DB_PATH: ${DB_PATH:-/app/data/homepedia.db}
   PYTHONUNBUFFERED: "1"
 
 services:
   app:
     build:
       context: ..
-      dockerfile: Dockerfile   
+      dockerfile: Dockerfile
     image: homepedia-app:latest
     container_name: homepedia-app
     env_file:
@@ -18,12 +16,14 @@ services:
       <<: *default-env
       STREAMLIT_SERVER_HEADLESS: "true"
     volumes:
-      - ../data:/app/data:rw          # persistance data (lié à DB_PATH)
-      - ../src:/app/src:rw            # hot-reload code
+      - ../data:/app/data:rw
+      - ../src:/app/src:rw
       - ../outputs:/app/outputs:rw
     working_dir: /app
     command: >
-      bash -lc "streamlit run src/app/streamlit_app.py --server.address=0.0.0.0 --server.port=${STREAMLIT_SERVER_PORT:-8501}"
+      src/app/streamlit_app.py
+      --server.address=0.0.0.0
+      --server.port=${STREAMLIT_SERVER_PORT:-8501}
     ports:
       - "${STREAMLIT_SERVER_PORT:-8501}:8501"
     restart: unless-stopped
