--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -15,6 +15,9 @@ services:
     environment:
       <<: *default-env
       STREAMLIT_SERVER_HEADLESS: "true"
+      # 🔽 Ajout pour Mongo
+      MONGO_URI: ${MONGO_URI:-mongodb://mongo:27017}
+      MONGO_DB: ${MONGO_DB:-homepedia}
     volumes:
       - ../data:/app/data:rw
       - ../src:/app/src:rw
@@ -46,6 +49,15 @@ services:
     depends_on:
       - app
     restart: unless-stopped
+
+  mongo:
+    image: mongo:7
+    container_name: homepedia-mongo
+    restart: unless-stopped
+    ports:
+      - "27017:27017"
+    volumes:
+      - ../mongo_data:/data/db
 
 volumes:
   metabase-data:
