--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,6 +2,7 @@ x-env: &default-env
   STREAMLIT_SERVER_PORT: ${STREAMLIT_SERVER_PORT:-8501}
   DB_PATH: ${DB_PATH:-/app/data/homepedia.db}
   PYTHONUNBUFFERED: "1"
+  PYTHONPATH: "/app"
 
 services:
   app:
@@ -22,7 +23,6 @@ services:
       - ../src:/app/src:rw
       - ../outputs:/app/outputs:rw
     working_dir: /app
-
     ports:
       - "${STREAMLIT_SERVER_PORT:-8501}:8501"
     restart: unless-stopped
@@ -31,6 +31,31 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
+  realtime-price:
+    build:
+      context: ..
+      dockerfile: Dockerfile
+    image: homepedia-app:latest
+    container_name: homepedia-realtime-price
+    env_file:
+      - ../.env
+    environment:
+      <<: *default-env
+      MONGO_URI: ${MONGO_URI:-mongodb://mongo:27017}
+      MONGO_DB: ${MONGO_DB:-homepedia}
+      POLL_INTERVAL_SECONDS: ${POLL_INTERVAL_SECONDS:-300}
+      INSEE_SOURCE_URL: ${INSEE_SOURCE_URL:-https://www.insee.fr/fr/statistiques/8669035}
+      REALTIME_REQUEST_TIMEOUT_SECONDS: ${REALTIME_REQUEST_TIMEOUT_SECONDS:-20}
+    volumes:
+      - ../data:/app/data:rw
+      - ../src:/app/src:rw
+      - ../outputs:/app/outputs:rw
+    working_dir: /app
+    depends_on:
+      - mongo
+    command: ["python", "-m", "src.realtime_price.worker"]
+    restart: unless-stopped
 
   metabase:
     image: metabase/metabase:latest
